# open_mower_jeremy

./: build_push.sh
.github/workflows/: build-image.yaml
docker/: Dockerfile  auto_backend_selector.py
src/lib/xbot_remote/src/: xbot_remote.cpp
src/mower_comms_mavros/: CMakeLists.txt  DiffDriveServiceInterfaceMAVROS.cpp  DiffDriveServiceInterfaceMAVROS.h  EmergencyServiceInterfaceMAVROS.cpp  EmergencyServiceInterfaceMAVROS.h  GpsServiceInterfaceMAVROS.cpp  GpsServiceInterfaceMAVROS.h  ImuServiceInterfaceMAVROS.cpp  MowerServiceInterfaceMAVROS.cpp  MowerServiceInterfaceMAVROS.h  PowerServiceInterfaceMAVROS.cpp  PowerServiceInterfaceMAVROS.h  README.md  mower_comms_MAVROS.cpp  package.xml
src/mower_comms_mavros/config/: ekf.yaml
src/mower_comms_mavros/include/: GpsServiceInterfaceMAVROS.h  MowerServiceInterfaceMAVROS.h  MowerUIServiceInterface.hpp
src/mower_comms_mavros/launch/: mower_mavros.launch  params.yaml
src/mower_comms_mavros/services/: diff_drive_service.json  emergency_service.json  gps_service.json  imu_service.json  input_service.json  mower_service.json  mower_ui_service.json  power_service.json  service_ids.h
src/mower_comms_mavros/src/: DiffDriveServiceInterfaceMAVROS.cpp  DiffDriveServiceInterfaceMAVROS.h  EmergencyServiceInterfaceMAVROS.cpp  EmergencyServiceInterfaceMAVROS.h  GpsServiceInterfaceMAVROS.cpp  GpsServiceInterfaceMAVROS.h  ImuServiceInterfaceMAVROS.cpp  ImuServiceInterfaceMAVROS.h  MowerServiceInterfaceMAVROS.cpp  MowerServiceInterfaceMAVROS.h  MowerUIServiceInterface.cpp  PowerServiceInterfaceMAVROS.cpp  PowerServiceInterfaceMAVROS.h  mower_comms_MAVROS.cpp
src/mower_map/: CMakeLists.txt  package.xml
src/mower_map/src/: mower_map_service.cpp
src/mower_simulation/: CMakeLists.txt
src/open_mower/params/: global_costmap_params.yaml
web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
